--- a/.pipelines/azure-pipeline-build.yml
+++ b/.pipelines/azure-pipeline-build.yml
@@ -114,6 +114,7 @@ jobs:
 
     - bash:
       inputs:
+        targetType: 'filePath'
         filePath: '$(Build.SourcesDirectory)/.pipelines/scripts/build.sh'
       workingDirectory: $(Build.SourcesDirectory)/src/
       displayName: 'Compile and build tar file'
