--- a/.pipelines/azure-pipeline-build.yml
+++ b/.pipelines/azure-pipeline-build.yml
@@ -12,8 +12,8 @@ pr:
 variables:
   HELM_CHART_NAME: 'aad-auth-proxy'
   ACR_REGISTRY: 'aadproxydev.azurecr.io'
-  ACR_REPOSITORY: '/internal/azuremonitor/auth-proxy/dev/aad-auth-proxy/images'
-  ACR_REPOSITORY_HELM: '/internal/azuremonitor/auth-proxy/dev'
+  ACR_REPOSITORY: '/public/azuremonitor/auth-proxy/dev/aad-auth-proxy/images'
+  ACR_REPOSITORY_HELM: '/public/azuremonitor/auth-proxy/dev'
   MCR_REGISTRY: 'mcr.microsoft.com'
   MCR_REPOSITORY: '/azuremonitor/auth-proxy/dev/aad-auth-proxy/images'
   MCR_REPOSITORY_HELM: '/azuremonitor/auth-proxy/dev/aad-auth-proxy'
@@ -265,7 +265,7 @@ jobs:
       echo {\"image.name\":\"$(HELM_FULL_IMAGE_NAME)\"} > $(Build.ArtifactStagingDirectory)/chart/metadata.json
     workingDirectory: $(Build.SourcesDirectory)/deploy/chart/
     displayName: "Build: push helm chart to dev ACR"
-    # condition: eq(variables.IS_PR, false)
+    condition: eq(variables.IS_PR, false)
     
   - task: PublishBuildArtifacts@1
     displayName: "Ev2: publish helm chart artifacts"
