--- a/.pipelines/azure-pipeline-build.yml
+++ b/.pipelines/azure-pipeline-build.yml
@@ -12,8 +12,8 @@ pr:
 variables:
   HELM_CHART_NAME: 'aad-auth-proxy'
   ACR_REGISTRY: 'aadproxydev.azurecr.io'
-  ACR_REPOSITORY: '/internal/azuremonitor/auth-proxy/dev/aad-auth-proxy/images'
-  ACR_REPOSITORY_HELM: '/internal/azuremonitor/auth-proxy/dev'
+  ACR_REPOSITORY: '/public/azuremonitor/auth-proxy/dev/aad-auth-proxy/images'
+  ACR_REPOSITORY_HELM: '/public/azuremonitor/auth-proxy/dev'
   MCR_REGISTRY: 'mcr.microsoft.com'
   MCR_REPOSITORY: '/azuremonitor/auth-proxy/dev/aad-auth-proxy/images'
   MCR_REPOSITORY_HELM: '/azuremonitor/auth-proxy/dev/aad-auth-proxy'
@@ -25,7 +25,7 @@ jobs:
 - job: Common
   displayName: Set image tags and publish Ev2 artifacts
   pool:
-    name: Azure-Pipelines-CI-Test-EO
+    name: Azure Pipelines
   steps:
     - bash: |
         if [ $(IS_PR) == "True" ]; then
@@ -81,10 +81,10 @@ jobs:
 - job: Build
   displayName: Build image
   pool:
-    name: Azure-Pipelines-CI-Test-EO
+    name: Azure Pipelines
   dependsOn: common
   variables:
-    LINUX_FULL_IMAGE_NAME: $[ dependencies.common.outputs['setup.FULL_IMAGE_NAME'] ]
+    FULL_IMAGE_NAME: $[ dependencies.common.outputs['setup.FULL_IMAGE_NAME'] ]
   steps:
 
     - task: CodeQL3000Init@0
@@ -112,23 +112,55 @@ jobs:
       condition: or(eq(variables.IS_PR, true), eq(variables.IS_MAIN_BRANCH, true))
       workingDirectory: $(Build.SourcesDirectory)
 
-    - bash:
-      inputs: '$(Build.SourcesDirectory)/.pipelines/scripts/build.sh'
-      workingDirectory: $(Build.SourcesDirectory)/src/
-      displayName: 'Compile and build tar file'
-
     - bash: |
-        mkdir -p $(Build.ArtifactStagingDirectory)/linux
+        echo Building and compiling aad-auth-proxy
+        # Install golang.
+        # https://golang.org/doc/install#install
+        mkdir -p $(Build.SourcesDirectory)/go19/
+        wget -nv -c https://go.dev/dl/go1.19.3.linux-amd64.tar.gz
+        tar -C $(Build.SourcesDirectory)/go19 -xzf go1.19.3.linux-amd64.tar.gz
+        # Installing tests dependencies.
+        export PATH=$PATH:$(Build.SourcesDirectory)/go19/bin
+        export GOBIN=$(Build.SourcesDirectory)/go19/bin
+
+        cd ./src/
+
+        echo Restoring packages
+
+        go get -v -t -d
+        if [ $? != 0 ]; then
+          printf "Error : [%d] when executing command: go get" $?
+          exit $?
+        fi
+
+        # Note: Building in ubuntu machine, but using alpine image, so we need to statically link binary to libraries
+        # https://stackoverflow.com/questions/58205781/dockerfile-error-standard-init-linux-go207-exec-user-process-caused-no-such
+        env CGO_ENABLED=0 go build -o main -ldflags "-w -s -v"
+
+        if [ $? != 0 ]; then
+          printf "Error building main"
+          exit 1
+        fi
+
+        tar cvf aad-auth-proxy.tar main
+
+        if [ $? != 0 ]; then
+          printf "Error packing: aad-auth-proxy.tar"
+          exit 1
+        fi
+
+        echo Building docker image
+        mkdir -p $(Build.ArtifactStagingDirectory)/build
         docker buildx create --name testbuilder
         docker buildx use testbuilder
         docker login $(ACR_REGISTRY) -u $(ACR_USERNAME) -p $(ACR_PASSWORD)
         if [ "$(Build.Reason)" != "PullRequest" ]; then
-          docker buildx build . --file ./Dockerfile -t $(FULL_IMAGE_NAME) --metadata-file $(Build.ArtifactStagingDirectory)/linux/metadata.json --push
+          docker buildx build . --file ./Dockerfile --tag $(FULL_IMAGE_NAME) --metadata-file $(Build.ArtifactStagingDirectory)/build/metadata.json --push
           docker pull $(FULL_IMAGE_NAME)
         else
-          docker buildx build . --file ./Dockerfile -t $(FULL_IMAGE_NAME) --metadata-file $(Build.ArtifactStagingDirectory)/linux/metadata.json --load
+          docker buildx build . --file ./Dockerfile --tag $(FULL_IMAGE_NAME) --metadata-file $(Build.ArtifactStagingDirectory)/build/metadata.json --load
         fi
-      workingDirectory: $(Build.SourcesDirectory)/src/
+      workingDirectory: $(Build.SourcesDirectory)
       displayName: "Build: build and push image to dev ACR"
 
     - bash: |
@@ -201,7 +233,7 @@ jobs:
 - job: Chart
   displayName: "Package helm chart"
   pool:
-    name: Azure-Pipelines-CI-Test-EO
+    name: Azure Pipelines
   dependsOn:
   - Common
   - Build
@@ -217,13 +249,13 @@ jobs:
       helmVersionToInstall: latest
 
   - bash: |
-      envsubst < $(Build.SourcesDirectory)/src/deploy/chart/aad-auth-proxy/Chart-template.yaml > $(Build.SourcesDirectory)/src/deploy/chart/aad-auth-proxy/Chart.yaml && envsubst < $(Build.SourcesDirectory)/src/deploy/chart/aad-auth-proxy/values-template.yaml > $(Build.SourcesDirectory)/src/deploy/chart/aad-auth-proxy/values.yaml
+      envsubst < $(Build.SourcesDirectory)/deploy/chart/aad-auth-proxy/Chart-template.yaml > $(Build.SourcesDirectory)/deploy/chart/aad-auth-proxy/Chart.yaml && envsubst < $(Build.SourcesDirectory)/deploy/chart/aad-auth-proxy/values-template.yaml > $(Build.SourcesDirectory)/deploy/chart/aad-auth-proxy/values.yaml
       helm version
     displayName: "Build: substitute chart version in Chart.yaml and values.yaml"
 
   - bash: |
       helm package ./aad-auth-proxy/
-    workingDirectory: $(Build.SourcesDirectory)/src/deploy/chart/
+    workingDirectory: $(Build.SourcesDirectory)/deploy/chart/
     displayName: "Build: package helm chart"
 
   - bash: |
@@ -231,7 +263,7 @@ jobs:
       helm push $(HELM_CHART_NAME)-$(HELM_SEMVER).tgz oci://$(ACR_REGISTRY)$(ACR_REPOSITORY_HELM)
       mkdir -p $(Build.ArtifactStagingDirectory)/chart
       echo {\"image.name\":\"$(HELM_FULL_IMAGE_NAME)\"} > $(Build.ArtifactStagingDirectory)/chart/metadata.json
-    workingDirectory: $(Build.SourcesDirectory)/otelcollector/deploy/chart/
+    workingDirectory: $(Build.SourcesDirectory)/deploy/chart/
     displayName: "Build: push helm chart to dev ACR"
     condition: eq(variables.IS_PR, false)
     
