--- a/docs/samples/sample-proxy-ingestion-aadapplication.yaml
+++ b/docs/samples/sample-proxy-ingestion-aadapplication.yaml
@@ -24,34 +24,36 @@ spec:
               - name: auth-port
                 containerPort: 8081
               env:
+              # (Required) Audience
               - name: AUDIENCE
                 value: https://monitor.azure.com/.default
+              # (Required) Azure Monitor workspace ingestion endpoint
               - name: TARGET_HOST
                 value: https://azure-monitor-workspace.eastus-1.metrics.ingest.monitor.azure.com
+              # (Required) Listening port for the proxy
               - name: LISTENING_PORT
                 value: "8081"
+              # (Required) Identity type - aadapplication
               - name: IDENTITY_TYPE
-                value: userAssigned
+                value: aadapplication
+              # (Required) AAD application client ID
               - name: AAD_CLIENT_ID
-                value: a711a6a4-1052-44eb-aec8-182e2b604c7f
+                value: <AAD-APPLICATION-CLIENT-ID>
+              # (Required) AAD application tenant ID
+              - name: AAD_TENANT_ID
+                value: <AAD-TENANT-ID>
+              # (Required) AAD application client certificate path
+              - name: AAD_CLIENT_CERTIFICATE_PATH
+                value: <PATH-TO-CERTIFICATE>
+              # (Optional) Token refresh duration in percentage
               - name: AAD_TOKEN_REFRESH_INTERVAL_IN_PERCENTAGE
                 value: "10"
+              # (Optional) OTEL collector endpoint, proxy will send traces and metrics if passsed
               - name: OTEL_GRPC_ENDPOINT
                 value: "otel-collector.observability.svc.cluster.local:4317"
+              # (Optional) OTEL service name, so that you cna identify the proxy in traces and metrics
               - name: OTEL_SERVICE_NAME
                 value: azuremonitor_ingestion
-              livenessProbe:
-                httpGet:
-                  path: /health
-                  port: auth-port
-                initialDelaySeconds: 5
-                timeoutSeconds: 5
-              readinessProbe:
-                httpGet:
-                  path: /ready
-                  port: auth-port
-                initialDelaySeconds: 5
-                timeoutSeconds: 5
 ---
 apiVersion: v1
 kind: Service
