--- a/deploy/chart/aad-auth-proxy/values-template.yaml
+++ b/deploy/chart/aad-auth-proxy/values-template.yaml
@@ -12,6 +12,7 @@ aadClientCertificatePath: ""
 aadTokenRefreshIntervalInPercentage: "10"
 otelServiceName: "aad_auth_proxy"
 otelGrpcEndpoint: ""
+overrideRequestHeaders: "{}"
 
 replicaCount: 1
 
