--- a/docs/samples/sample-docker-compose-ingestion-aadapplication.yaml
+++ b/docs/samples/sample-docker-compose-ingestion-aadapplication.yaml
@@ -1,7 +1,7 @@
-version: '1'
+version: "1"
 services:
   azuremonitor-ingestion-proxy:
-    image: mcr.microsoft.com/azuremonitor/auth-proxy/prod/aad-auth-proxy/images/aad-auth-proxy:0.1.0-main-08-23-2023-5988d874
+    image: mcr.microsoft.com/azuremonitor/auth-proxy/prod/aad-auth-proxy/images/aad-auth-proxy:0.1.0-main-01-10-2024-08b31473
     restart: always
     volumes:
       - ./:/certs
@@ -16,7 +16,7 @@ services:
       AAD_TENANT_ID: "f511a6a4-1052-44eb-aec8-182e2b604c7f"
       AAD_CLIENT_CERTIFICATE_PATH: "/certs/AuthProxyPem.pem"
   azuremonitor-query-proxy:
-    image: mcr.microsoft.com/azuremonitor/auth-proxy/prod/aad-auth-proxy/images/aad-auth-proxy:0.1.0-main-08-23-2023-5988d874
+    image: mcr.microsoft.com/azuremonitor/auth-proxy/prod/aad-auth-proxy/images/aad-auth-proxy:0.1.0-main-01-10-2024-08b31473
     restart: always
     volumes:
       - ./:/certs
@@ -30,5 +30,3 @@ services:
       AAD_CLIENT_ID: "a711a6a4-1052-44eb-aec8-182e2b604c7f"
       AAD_TENANT_ID: "f511a6a4-1052-44eb-aec8-182e2b604c7f"
       AAD_CLIENT_CERTIFICATE_PATH: "/certs/AuthProxyPem.pem"
-
-    
